--- a/TPFINAL/nbproject/project.properties
+++ b/TPFINAL/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TPFINAL
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Juan Cruz\\OneDrive\\Escritorio\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\facun\\OneDrive\\Escritorio\\Folders & Shortcuts\\Coding Stuff\\TUDS\\Segundo Cuatrimestre\\Laboratorio de Programaci\u00f3n I\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar=C:\\Users\\jerem\\Desktop\\Programacion\\Laboratorio\\mariadb-java-client-3.1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar-1=C:\\Users\\Juan Cruz\\OneDrive\\Escritorio\\mariadb-java-client-3.1.4.jar
 includes=**
@@ -41,7 +42,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.1.4.jar}:\
     ${file.reference.mariadb-java-client-3.1.4.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
