--- a/TPFINAL/nbproject/project.properties
+++ b/TPFINAL/nbproject/project.properties
@@ -37,13 +37,15 @@ file.reference.jcalendar-1.4.jar=C:\\Users\\Juan Cruz\\OneDrive\\Escritorio\\jca
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\facun\\OneDrive\\Escritorio\\Folders & Shortcuts\\Coding Stuff\\TUDS\\Segundo Cuatrimestre\\Laboratorio de Programaci\u00f3n I\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar=C:\\Users\\jerem\\Desktop\\Programacion\\Laboratorio\\mariadb-java-client-3.1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar-1=C:\\Users\\Juan Cruz\\OneDrive\\Escritorio\\mariadb-java-client-3.1.4.jar
+file.reference.mariadb-java-client-3.1.4.jar-2=C:\\Users\\facun\\OneDrive\\Escritorio\\Folders & Shortcuts\\Coding Stuff\\TUDS\\Segundo Cuatrimestre\\Laboratorio de Programaci\u00f3n I\\mariadb-java-client-3.1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.1.4.jar}:\
     ${file.reference.mariadb-java-client-3.1.4.jar-1}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mariadb-java-client-3.1.4.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
