--- a/TPFINAL/nbproject/project.properties
+++ b/TPFINAL/nbproject/project.properties
@@ -36,10 +36,12 @@ excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Juan Cruz\\OneDrive\\Escritorio\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\facun\\OneDrive\\Escritorio\\Folders & Shortcuts\\Coding Stuff\\TUDS\\Segundo Cuatrimestre\\Laboratorio de Programaci\u00f3n I\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=C:\\Users\\Agus\\Desktop\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-3=C:\\Users\\Jeremias\\Downloads\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar=C:\\Users\\jerem\\Desktop\\Programacion\\Laboratorio\\mariadb-java-client-3.1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar-1=C:\\Users\\Juan Cruz\\OneDrive\\Escritorio\\mariadb-java-client-3.1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar-2=C:\\Users\\facun\\OneDrive\\Escritorio\\Folders & Shortcuts\\Coding Stuff\\TUDS\\Segundo Cuatrimestre\\Laboratorio de Programaci\u00f3n I\\mariadb-java-client-3.1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar-3=C:\\Users\\Agus\\Desktop\\mariadb-java-client-3.1.4.jar
+file.reference.mariadb-java-client-3.1.4.jar-4=C:\\Users\\Jeremias\\Downloads\\mariadb-java-client-3.1.4.jar
 file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\Agus\\Desktop\\mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
@@ -51,7 +53,9 @@ javac.classpath=\
     ${file.reference.mariadb-java-client-3.1.4.jar-2}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.mysql-connector-java-8.0.17.jar}:\
-    ${file.reference.mariadb-java-client-3.1.4.jar-3}
+    ${file.reference.mariadb-java-client-3.1.4.jar-3}:\
+    ${file.reference.jcalendar-1.4.jar-3}:\
+    ${file.reference.mariadb-java-client-3.1.4.jar-4}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
