--- a/TPFINAL/nbproject/project.properties
+++ b/TPFINAL/nbproject/project.properties
@@ -1,9 +1,11 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=TPFINAL
+application.vendor=Mauro
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,16 +34,19 @@ dist.jar=${dist.dir}/TPFINAL.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TPFINAL
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Juan Cruz\\OneDrive\\Escritorio\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\facun\\OneDrive\\Escritorio\\Folders & Shortcuts\\Coding Stuff\\TUDS\\Segundo Cuatrimestre\\Laboratorio de Programaci\u00f3n I\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=C:\\Users\\Agus\\Desktop\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-3=C:\\Users\\Jeremias\\Downloads\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-4=C:\\Users\\Mauro\\Downloads\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar=C:\\Users\\jerem\\Desktop\\Programacion\\Laboratorio\\mariadb-java-client-3.1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar-1=C:\\Users\\Juan Cruz\\OneDrive\\Escritorio\\mariadb-java-client-3.1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar-2=C:\\Users\\facun\\OneDrive\\Escritorio\\Folders & Shortcuts\\Coding Stuff\\TUDS\\Segundo Cuatrimestre\\Laboratorio de Programaci\u00f3n I\\mariadb-java-client-3.1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar-3=C:\\Users\\Agus\\Desktop\\mariadb-java-client-3.1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar-4=C:\\Users\\Jeremias\\Downloads\\mariadb-java-client-3.1.4.jar
+file.reference.mariadb-java-client-3.1.4.jar-5=C:\\Users\\Mauro\\Downloads\\mariadb-java-client-3.1.4.jar
 file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\Agus\\Desktop\\mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
@@ -55,7 +60,9 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.17.jar}:\
     ${file.reference.mariadb-java-client-3.1.4.jar-3}:\
     ${file.reference.jcalendar-1.4.jar-3}:\
-    ${file.reference.mariadb-java-client-3.1.4.jar-4}
+    ${file.reference.mariadb-java-client-3.1.4.jar-4}:\
+    ${file.reference.jcalendar-1.4.jar-4}:\
+    ${file.reference.mariadb-java-client-3.1.4.jar-5}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -95,7 +102,7 @@ main.class=Vista.TPFINAL
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_24
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
