--- a/TPFINAL/nbproject/project.properties
+++ b/TPFINAL/nbproject/project.properties
@@ -62,7 +62,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-3}:\
     ${file.reference.mariadb-java-client-3.1.4.jar-4}:\
     ${file.reference.jcalendar-1.4.jar-4}:\
-    ${file.reference.mariadb-java-client-3.1.4.jar-5}
+    ${file.reference.mariadb-java-client-3.1.4.jar-5}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,8 +72,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=24
-javac.target=24
+javac.source=25
+javac.target=25
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -102,7 +103,7 @@ main.class=Vista.TPFINAL
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_24
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
